test/corpus/compliance.txt
==================
Heredoc redirects
==================

cat <<EOF
hello
EOF
cat <<end
END
end
cat <<'PY'
print('hello')
PY
cat <<"JS"
console.log("hello")
JS
cat <<-EOF
	hello
	EOF
cat <<EOF
EOFX
EOF
cat <<EOF
	EOF
EOF
cat <<-EOF
 EOF
EOF

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end)))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end))))

==================
Heredoc word delimiter
==================

cat <<EOF-1
body
EOF-1

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (redirect
            (redirect_operator)
            (heredoc_start)))))
    (heredoc_body
      (heredoc_content)
      (heredoc_end))))

==================
Arithmetic commands and expansions
==================

print $((1 + 2))
(( count += 1 ))
for ((i = 0; i < 3; i++)); do echo $i; done

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (arithmetic_expansion
            (arithmetic_expression))))))
  (terminated_statement
    (list
      (pipeline
        (arithmetic_command
          (arithmetic_expression)))))
  (terminated_statement
    (list
      (pipeline
        (for_statement
          (c_style_for_clause
            (arithmetic_expression)
            (arithmetic_expression)
            (arithmetic_expression))
          (terminated_statement
            (list
              (pipeline
                (simple_command
                  (command_name
                    (word))
                  (variable_expansion
                    (variable_name)))))))))))

==================
Conditional expressions
==================

[[ -n $name && $file == *.zsh ]]
[[ -v path[1] && -n ${name:-default} ]]
[[ $file == (#i)*.zsh ]]

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (conditional_command
          (conditional_expression
            (test_unary_expression
              (test_operator)
              (variable_expansion
                (variable_name)))
            (conditional_operator)
            (test_binary_expression
              (variable_expansion
                (variable_name))
              (test_operator)
              (word)))))))
  (terminated_statement
    (list
      (pipeline
        (conditional_command
          (conditional_expression
            (test_unary_expression
              (test_operator)
              (word))
            (conditional_operator)
            (test_unary_expression
              (test_operator)
              (parameter_expansion
                parameter: (variable_name)
                (parameter_operator)
                (word))))))))
  (terminated_statement
    (list
      (pipeline
        (conditional_command
          (conditional_expression
            (test_binary_expression
              (variable_expansion
                (variable_name))
              (test_operator)
              (word))))))))

==================
Glob qualifiers
==================

print *.zsh(.) *(#qN)

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (glob_pattern
            (word)
            (glob_qualifier))
          (glob_pattern
            (word)
            (glob_qualifier)))))))

==================
Bracket and numeric glob patterns
==================

print foo[abc].zsh [[:alpha:]] <->

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (glob_pattern
            pattern: (word))
          (glob_pattern
            pattern: (word))
          (glob_pattern
            pattern: (word)))))))

==================
Richer glob qualifiers
==================

print file*(N-/) file*(.om[1,3])

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (glob_pattern
            pattern: (word)
            (glob_qualifier))
          (glob_pattern
            pattern: (word)
            (glob_qualifier)))))))

==================
Structured parameter expansion operators
==================

print ${name:-default} ${path##*/} ${value/pat/repl} ${array:1:2}
print ${${nested:-fallback}#fall}

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            (variable_name)
            (parameter_substitution
              (word)
              (word)))
          (parameter_expansion
            (variable_name)
                (parameter_slice
                  (word)
                  (word)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            (parameter_expansion
              (variable_name)
              (parameter_operator)
              (word))
            (parameter_operator)
            (word)))))))

==================
Zsh 5.9 parameter operators
==================

print ${+name}
print ${var::=default} ${var:#pat}
print ${var:|ary} ${var:*ary} ${var:^ary} ${var:^^ary}

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            (parameter_operator)
            (variable_name))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_operator)
            (word)))))))

==================
Parameter substitution variants
==================

print ${var//pat/repl} ${var/#pat/repl} ${var/%pat/repl}
print ${var//(#m)[[:alpha:]]/${MATCH:l}}

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_substitution
              (word)
              (word)))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_substitution
              (word)
              (word)))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_substitution
              (word)
              (word)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            parameter: (variable_name)
            (parameter_substitution
              (word)
              (word)
              (parameter_expansion
                parameter: (variable_name)
                (parameter_slice
                  (word))))))))))

==================
Tranche 5 flag-only parameter expansions
==================

set -- ${(s: :)line}
echo "${${(%):-%N}:A:h}/move_focus_to_any_prev_window.sh"

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (word)
          (parameter_expansion
            (parameter_flags)
            (variable_name))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (double_quoted_string
            (parameter_expansion
              parameter: (parameter_expansion
                (parameter_flags)
                (parameter_operator)
                (word))
              (parameter_slice
                (word)
                (word)))))))))

==================
Special parameter substitution and array assignment
==================

echo ${@/\/\\}
ARR1=(M_ A_ D_)
local FPATH=${(Q)1}

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            parameter: (special_parameter)
            (parameter_substitution
              (escape_sequence)
              (escape_sequence)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (assignment
            name: (variable_name)
            (array_assignment
              (word)
              (word)
              (word)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (assignment
            name: (variable_name)
            (parameter_expansion
              (parameter_flags)
              (special_parameter))))))))

==================
Tranche 4 parameter subscripts and escaped parameter parts
==================

OLD_SELF_INSERT=${${(s.:.)widgets[self-insert]}[2,3]}
ZSH_HIGHLIGHT_STYLES[comment]=none
active_out="${active_out#*\'}"
windows_out=${windows_out//\\n/$'\n'}

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (assignment
            name: (variable_name)
            (parameter_expansion
              parameter: (parameter_expansion
                (parameter_flags)
                (variable_name)
                (parameter_subscript))
              (parameter_subscript)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (assignment
            name: (variable_name)
            (word))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (assignment
            name: (variable_name)
            (double_quoted_string
              (parameter_expansion
                parameter: (variable_name)
                (parameter_operator)
                (word)
                (escape_sequence))))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (assignment
            name: (variable_name)
            (parameter_expansion
              parameter: (variable_name)
              (parameter_substitution
                (escape_sequence)
                (word)
                (ansi_c_string
                  (escape_sequence))))))))))

==================
Option and emulation command forms
==================

emulate -L zsh
setopt extendedglob
unsetopt nomatch

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (word)
          (word)))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (word)))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (word))))))

==================
Zshrc style fixture
==================

alias ll='ls -lah'
alias gst='git status --short'
export EDITOR=${EDITOR:-vim}
export PATH=${HOME}/bin:$PATH
autoload -Uz compinit promptinit
zstyle ':completion:*' matcher-list 'm:{a-z}={A-Z}'
bindkey '^R' history-incremental-search-backward
[[ -n $ZDOTDIR ]] && source ${ZDOTDIR:-$HOME}/.zshrc.local

---

(source_file
  (terminated_statement)
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (assignment
            (variable_name)
            (single_quoted_string))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (assignment
            (variable_name)
            (single_quoted_string))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (assignment
            (variable_name)
            (parameter_expansion
              (variable_name)
              (parameter_operator)
              (word)))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (assignment
            (variable_name)
            (parameter_expansion
              (variable_name)))
          (word)
          (variable_expansion
            (variable_name))))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (word)
          (word)
          (word)))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (single_quoted_string)
          (word)
          (single_quoted_string)))))
  (terminated_statement
    (list
      (pipeline
        (simple_command
          (command_name
            (word))
          (single_quoted_string)
          (word)))))
  (terminated_statement
    (list
      (pipeline
        (conditional_command
          (conditional_expression
            (test_unary_expression
              (test_operator)
              (variable_expansion
                (variable_name))))))
      (list_operator)
      (pipeline
        (simple_command
          (command_name
            (word))
          (parameter_expansion
            (variable_name)
            (parameter_operator)
            (variable_expansion
              (variable_name)))
          (word))))))
